# brush

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml  spelling_and_links.yml
.zed/: debug.json
brush_nextjs/: next.config.js  package.json  tsconfig.json
crates/brush-app/: Cargo.toml
crates/brush-app/app/src/main/java/com/splats/app/: MainActivity.java
crates/brush-app/src/: bin.rs  ffi.rs
crates/brush-app/tests/: integration.rs
crates/brush-bench-test/src/: reference.rs  safetensor_utils.rs  training_bench.rs
crates/brush-bench-test/tests/: integration.rs
crates/brush-cli/src/: lib.rs
crates/brush-dataset/: Cargo.toml
crates/brush-dataset/src/: lib.rs  scene.rs  scene_loader.rs
crates/brush-dataset/src/formats/: colmap.rs
crates/brush-kernel/src/: lib.rs
crates/brush-prefix-sum/: Cargo.toml
crates/brush-prefix-sum/src/: lib.rs
crates/brush-process/src/: message.rs  process.rs  train_stream.rs  view_stream.rs
crates/brush-render/: Cargo.toml
crates/brush-render-bwd/src/: burn_glue.rs  lib.rs  render_bwd.rs  tests.rs
crates/brush-render-bwd/src/shaders/: project_backwards.wgsl  rasterize_backwards.wgsl
crates/brush-render/src/: burn_glue.rs  gaussian_splats.rs  get_tile_offset.rs  lib.rs  render.rs  render_aux.rs  sh.rs  shaders.rs
crates/brush-render/src/shaders/: helpers.wgsl  map_gaussian_to_intersects.wgsl  project.wgsl  project_forward.wgsl  project_visible.wgsl  rasterize.wgsl
crates/brush-rerun/src/: visualize_tools.rs
crates/brush-serde/src/: export.rs  import.rs  lib.rs
crates/brush-sort/: Cargo.toml
crates/brush-sort/src/: lib.rs
crates/brush-train/: Cargo.toml
crates/brush-train/src/: config.rs  eval.rs  lib.rs  splat_init.rs  train.rs
crates/brush-ui/: Cargo.toml
crates/brush-ui/src/: app.rs  datasets.rs  lib.rs  panels.rs  scene.rs  settings.rs  settings_popup.rs  stats.rs  training_panel.rs  ui_process.rs
crates/brush-vfs/: Cargo.toml
crates/brush-vfs/src/: data_source.rs  lib.rs
crates/brush-wgsl/src/: lib.rs
crates/rrfd/src/: lib.rs  wasm.rs
examples/train-2d/examples/: train-2d.rs
extras/: Dockerfile
