[package]
name = "brush-app"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true

# Lib for android NDK and WASM.
[lib]
name = "brush_app"
crate-type = ["cdylib", "rlib"]

# Bin for desktop platforms.
[[bin]]
name = "brush_app"
path = "src/bin.rs"

[features]
default = ["training"]

training = ["brush-cli/training", "brush-process/training", "brush-ui/training"]
tracy = ["dep:tracing-subscriber", "dep:tracing-tracy"]
debug-validation = ["brush-render/debug-validation", "brush-ui/debug-validation"]


[dependencies]
# Brush deps.
brush-ui.path = "../brush-ui"
brush-render.path = "../brush-render"
brush-vfs.path = "../brush-vfs"
brush-process = { path = "../brush-process" }

burn-wgpu.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

egui.workspace = true
eframe.workspace = true

anyhow.workspace = true
tracing.workspace = true
log.workspace = true

tracing-subscriber = { workspace = true, optional = true }
tracing-tracy = { workspace = true, optional = true }

# On desktop platforms
[target.'cfg(any(target_family = "unix", target_family = "windows"))'.dependencies]
brush-cli.path = "../brush-cli"

winit = { version = "0.30", features = ["default"] }
clap.workspace = true
env_logger.workspace = true
tokio = { workspace = true, features = ["io-util", "rt", "rt-multi-thread"] }

[target.'cfg(target_family = "windows")'.dependencies]
winapi.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30", features = ["android-game-activity"] }
rrfd.path = "../rrfd"
tokio = { workspace = true, features = ["io-util", "rt", "rt-multi-thread"] }
android_logger = "0.15.0"
jni = "0.21.1"

# On WASM
[target.'cfg(target_family = "wasm")'.dependencies]
glam.workspace = true
tokio_with_wasm = { workspace = true, features = ["rt"] }
tokio = { workspace = true, features = ["io-util", "rt"] }
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = [
    "HtmlCanvasElement",
    "Document",
    "Window",
] }
wasm-logger = "0.2.0"
# wasm_js random backend needs to be enabled explicitly.
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
tempfile = "3.23.0"

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-Oz",
    "--converge",
    "--enable-bulk-memory",
    "--enable-nontrapping-float-to-int",
]

[package.metadata.cargo-shear]
ignored = ["getrandom"]

[lints]
workspace = true
