[package]
name = "brush-ui"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[features]
training = ["brush-process/training", "dep:brush-dataset", "brush-serde/export", "dep:image"]
debug-validation = ["brush-process/debug-validation"]

[dependencies]
brush-render.path = "../brush-render"
brush-vfs.path = "../brush-vfs"
brush-process.path = "../brush-process"
brush-serde.path = "../brush-serde"
rrfd.path = "../rrfd"

log.workspace = true
anyhow.workspace = true
serde.workspace = true
burn.workspace = true
burn-cubecl.workspace = true
burn-wgpu.workspace = true
glam.workspace = true
egui.workspace = true
egui_tiles.workspace = true
eframe.workspace = true
wgpu.workspace = true
tokio_with_wasm = { workspace = true, features = ["rt"] }
tokio = { workspace = true }
tracing.workspace = true
web-time.workspace = true
humantime.workspace = true
tokio-stream.workspace = true
wasm-bindgen.workspace = true
bytemuck = { version = "1.14", features = ["derive"] }

brush-dataset = { path = "../brush-dataset", optional = true }
image = { workspace = true, optional = true }


[lints]
workspace = true
